# ucb_ai_hackathon

./: .gitignore  README.md
backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_ui.sh  streamlit_app.py
backend/app/: __init__.py  api.py  config.py  exceptions.py  jobs.py  models.py  parsing.py  providers.py  repositories.py  services.py  tracing.py
backend/app/agents/: __init__.py  data_agent.py  research_agent.py
backend/app/agents/tools/: __init__.py  browserbase_research.py
backend/app/api/: __init__.py  container.py  dependencies.py  mappers.py  responses.py
backend/app/api/data/: __init__.py  controller.py  routes.py  service.py
backend/app/api/dataset/: controller.py  routes.py  service.py
backend/app/api/labels/: __init__.py  controller.py  routes.py  (+1 more)
backend/app/clients/: __init__.py  ai.py  anthropic.py  browserbase.py  image_reader.py  part_of_speech.py  storage.py  translation.py
backend/app/core/: config.py  database.py
backend/app/database/: session.py
backend/app/integrations/: __init__.py  providers.py
backend/app/routes/: container.py  context.py  mappers.py
backend/app/src/: __init__.py  config.py  jobs.py  parsing.py  providers.py  repositories.py  storage.py  tracing.py
backend/app/utils/: __init__.py  job_runner.py  jobs.py
backend/migrations/: env.py
backend/migrations/versions/: 20260620_0001_initial_langbase_schema.py  5e519a099282_initial_schema_languages_data_labels.py  624af43dabd3_change_label_type_to_enum_pos_ocr_text.py  6711c04595a2_add_datasets_table_and_link_data_labels_.py  f40b80b93d9f_add_research_table.py
backend/scripts/: blank_translation_labels.py  create_pos_rows_from_translation.py  live_test.py  simulated_test.py  trim_language_rows.py
backend/tests/: conftest.py  test_api.py  test_browserbase_provider.py  test_browserbase_tool.py  test_config.py  test_data_agent.py  test_data_service.py  test_pos_seed.py  test_research_agent.py  test_research_service.py  test_tracing.py  test_translation_split.py
(+115 files in other folders)
