[project]
name = "backend"
version = "0.1.0"
description = "Low-resource language dataset preservation backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.9",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
