[project]
name = "backend"
version = "0.1.0"
description = "Low-resource language dataset preservation backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.111.0",
    "arize-otel>=0.13.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "httpx>=0.27.0",
    "openinference-instrumentation-anthropic>=1.0.6",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "sqlmodel>=0.0.38",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
